# freezer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml
src/: configuration.rs  digest.rs  feeds.rs  lib.rs  main.rs  subscriber.rs
tests/: atom.xml  config.toml  rss.xml
