[package]
name = "freezer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
lettre = "0.11.18"
reqwest = { version = "0.12.23", features = ["blocking"] }
rss = { version = "2.0.12", features = ["validation"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
toml = "0.9.5"
