[package]
name = "freezer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
feed-rs = "2.3.1"
futures = "0.3.31"
home = "0.5.11"
lettre = "0.11.18"
reqwest = { version = "0.12.23", features = ["blocking"] }
rss = { version = "2.0.12", features = ["validation"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
